--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@
             <th><a href="video.html">🎥 Movies</a></th>
             <th><a href="video music.html">🎞Basant & Diasti🎞</a></th>
             <th><a href="music.html">🕋quran🕋</a></th>
+          <th><a href="https://kbdalnby180-commits.github.io/crash-plane/">🛫plan X🛫</a></th>
         </tr>
     </table>
 
@@ -151,3 +152,4 @@
 
 </body>
 </html>
+
