--- a/video music.html
+++ b/video music.html
@@ -1,103 +1,71 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>🎞Basant & Diasti🎞</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #000;
-            margin: 0;
-            padding: 0;
-            color: white;
-        }
-        header {
-            background-color: #111;
-            color: #e50914;
-            padding: 20px;
-            text-align: center;
-            font-size: 28px;
-            font-weight: bold;
-            box-shadow: 0 0 15px #000;
-        }
-        .video-gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-            gap: 20px;
-            padding: 20px;
-        }
-        .video-card {
-            background-color: #1a1a1a;
-            padding: 15px;
-            border-radius: 10px;
-            box-shadow: 0 0 10px #000;
-            transition: transform 0.3s ease-in-out;
-        }
-        .video-card:hover {
-            transform: scale(1.05);
-        }
-        .video-card h3 {
-            margin: 10px 0;
-            color: #ff3c00;
-            font-size: 18px;
-            text-align: center;
-        }
-        video {
-            width: 100%;
-            border-radius: 10px;
-            background-color: black;
-        }
-        footer {
-            background-color: #111;
-            color: #aaa;
-            padding: 10px;
-            text-align: center;
-            margin-top: 20px;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>صفحة الفيديوهات</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #111;
+    color: white;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+    flex-direction: column;
+  }
+
+  h1 {
+    font-size: 72px;
+    color: #ff3c00;
+    margin: 0;
+  }
+
+  p {
+    font-size: 24px;
+    margin-top: 20px;
+    color: #ccc;
+  }
+
+  .icon {
+    font-size: 80px;
+    margin-bottom: 20px;
+    color: #ff3c00;
+    animation: bounce 2s infinite;
+  }
+
+  @keyframes bounce {
+    0%, 100% { transform: translateY(0); }
+    50% { transform: translateY(-20px); }
+  }
+
+  a {
+    color: #00c3ff;
+    text-decoration: none;
+    margin-top: 30px;
+    display: inline-block;
+    font-size: 20px;
+    border: 2px solid #00c3ff;
+    padding: 10px 20px;
+    border-radius: 10px;
+    transition: 0.3s;
+  }
+
+  a:hover {
+    background-color: #00c3ff;
+    color: #111;
+  }
+</style>
 </head>
 <body>
-    <header>
-      🎞Basant & Diasti🎞
-    </header>
 
-    <div class="video-gallery">
-        <div class="video-card">
-            <h3>بسنت و دياسطي الموسم الرابع 1</h3>
-            <video controls>
-                <source src="video\---بسنت ودياسطي الموسم الرابع 02.mp4" type="video/mp4">
-                متصفحك لا يدعم تشغيل الفيديو.
-            </video>
-        </div>
+<div class="icon">🎬</div>
+<h1>تحت الصيانة</h1>
+<p>الصفحة دي فيها تصليحات حاليًا، راجعنا لاحقًا لتحميل الفيديوهات.</p>
+<a href="index.html">العودة للرئيسية</a>
 
-        <div class="video-card">
-            <h3>بسنت و دياسطي الموسم الرابع 2</h3>
-            <video controls>
-                <source src="video\بسنت ودياسطى الموسم الرابع , الحلقة الـ 4 - YouTube_2.mp4" type="video/mp4">
-                متصفحك لا يدعم تشغيل الفيديو.
-            </video>
-        </div>
-
-        <div class="video-card">
-            <h3>بسنت و دياسطي الموسم الرابع 3</h3>
-            <video controls>
-                <source src="video\بسنت ودياسطي جـ1׃ الحلقة 07 من 30 .. سنترال الشاي.mp4" type="video/mp4">
-                متصفحك لا يدعم تشغيل الفيديو.
-            </video>
-        </div>
-
-        <div class="video-card">
-            <h3>بسنت و دياسطي الموسم الاربع 4</h3>
-            <video controls>
-                <source src="video\بسنت ودياسطي جـ1׃ الحلقة 08 من 30    فوبيا الترعة.mp4" type="video/mp4">
-                متصفحك لا يدعم تشغيل الفيديو.
-            </video>
-        </div>
-    </div>
-
-    <footer>
-        &copy; 2025 - جميع الحقوق محفوظة
-    </footer>
 </body>
 </html>
