--- a/video.html
+++ b/video.html
@@ -1,88 +1,71 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ركن الأفلام والمسلسلات</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #111;
-            color: #fff;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #000;
-            color: #f00;
-            padding: 15px;
-            text-align: center;
-            font-size: 22px;
-        }
-        section {
-            margin: 20px auto;
-            padding: 15px;
-            width: 70%;
-            background-color: #222;
-            border-radius: 10px;
-            box-shadow: 0 0 10px rgba(255,0,0,0.3);
-        }
-        section h2 {
-            text-align: center;
-            color: #ff4444;
-        }
-        video {
-            display: block;
-            width: 100%;
-            max-height: 450px;
-            margin: 10px auto;
-            border-radius: 10px;
-            background-color: #000;
-        }
-        footer {
-            background-color: #000;
-            color: #f33;
-            padding: 10px;
-            text-align: center;
-            position: fixed;
-            bottom: 0;
-            width: 100%;
-        }
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>صفحة الفيديوهات</title>
+<style>
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #111;
+    color: white;
+    margin: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    text-align: center;
+    flex-direction: column;
+  }
+
+  h1 {
+    font-size: 72px;
+    color: #ff3c00;
+    margin: 0;
+  }
+
+  p {
+    font-size: 24px;
+    margin-top: 20px;
+    color: #ccc;
+  }
+
+  .icon {
+    font-size: 80px;
+    margin-bottom: 20px;
+    color: #ff3c00;
+    animation: bounce 2s infinite;
+  }
+
+  @keyframes bounce {
+    0%, 100% { transform: translateY(0); }
+    50% { transform: translateY(-20px); }
+  }
+
+  a {
+    color: #00c3ff;
+    text-decoration: none;
+    margin-top: 30px;
+    display: inline-block;
+    font-size: 20px;
+    border: 2px solid #00c3ff;
+    padding: 10px 20px;
+    border-radius: 10px;
+    transition: 0.3s;
+  }
+
+  a:hover {
+    background-color: #00c3ff;
+    color: #111;
+  }
+</style>
 </head>
 <body>
 
-<header>
-    🎬 ركن الأفلام والمسلسلات والمسرحيات
-</header>
-
-<section>
-    <h2>🎥 مسرحية</h2>
-    <video controls>
-        <source src="video\مسرحية العيال كبرت - سعيد صالح - يونس شلبي - احمد زكي - كاملة_2.mp4" type="video/mp4">
-        المتصفح لا يدعم الفيديو.
-    </video>
-</section>
-
-<section>
-    <h2>🎥 فيلم</h2>
-    <video controls>
-        <source src="video\فيلم النمر الأسود - بطولة أحمد زكي.mp4" type="video/mp4">
-        المتصفح لا يدعم الفيديو.
-    </video>
-</section>
-
-<section>
-    <h2>📺 مسلسل</h2>
-    <video controls>
-        <source src="video\مسلسل يوميات ونيس - الجزء الثالث - الحلقة الأولي 1_2.mp4" type="video/mp4">
-        المتصفح لا يدعم الفيديو.
-    </video>
-</section>
-
-<footer>
-    © 2024 - جميع الحقوق محفوظة 🎬
-</footer>
+<div class="icon">🎬</div>
+<h1>تحت الصيانة</h1>
+<p>الصفحة دي فيها تصليحات حاليًا، راجعنا لاحقًا لتحميل الفيديوهات.</p>
+<a href="index.html">العودة للرئيسية</a>
 
 </body>
 </html>
