--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
             <th><a href="video music.html">🎞Basant & Diasti🎞</a></th>
             <th><a href="music.html">🕋quran🕋</a></th>
           <th><a href="https://kbdalnby180-commits.github.io/crash-plane/">🛫plan X🛫</a></th>
+            <th><a href="star.html">💖تقييمك ليا💖</a></th>
         </tr>
     </table>
 
@@ -152,4 +153,5 @@
 
 </body>
 </html>
+
 
