--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
             <th><a href="music.html">🕋quran🕋</a></th>
           <th><a href="https://kbdalnby180-commits.github.io/crash-plane/">🛫plan X🛫</a></th>
             <th><a href="star.html">💖تقييمك ليا💖</a></th>
+         <th><a href="info.html">💖معلومات عن الموقع💖</a></th>
         </tr>
     </table>
 
@@ -153,5 +154,6 @@
 
 </body>
 </html>
+
 
 
