--- a/info.html
+++ b/info.html
@@ -91,7 +91,7 @@
 
         <div class="profile">
             <!-- ضع هنا صورتك الشخصية -->
-            <img src="path-to-your-photo.jpg" alt="صورة المؤسس">
+            <img src="WhatsApp Image 2025-08-30 at 04.14.33_7b947ebc.jpg" alt="صورة المؤسس">
 
             <div class="info">
                 <p><strong>الاسم الكامل:</strong> خالد مرزوق عبد النبي</p>
