--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> مش هتقدر تتسلي غير معانا</title>
     <style>
         /* 🌑 الخلفية والستايل الأساسي */
@@ -154,6 +155,7 @@
 
 </body>
 </html>
+
 
 
 
