--- a/index.html
+++ b/index.html
@@ -132,18 +132,17 @@
     </header>
 
     <!-- 🟧 جدول الروابط -->
-    <table>
-        <tr>
-            <th><a href="game.html">🎮 Game War</a></th>
-            <th><a href="من سيربح المليون.html">❓ Game Question</a></th>
-            <th><a href="video.html">🎥 Movies</a></th>
-            <th><a href="video music.html">🎞Basant & Diasti🎞</a></th>
-            <th><a href="music.html">🕋quran🕋</a></th>
-          <th><a href="https://kbdalnby180-commits.github.io/crash-plane/">🛫plan X🛫</a></th>
-            <th><a href="star.html">💖تقييمك ليا💖</a></th>
-         <th><a href="info.html">💖معلومات عن الموقع💖</a></th>
-        </tr>
-    </table>
+<div class="menu-grid">
+  <a href="game.html">🎮 Game War</a>
+  <a href="من سيربح المليون.html">❓ Game Question</a>
+  <a href="video.html">🎥 Movies</a>
+  <a href="video music.html">🎞Basant & Diasti🎞</a>
+  <a href="music.html">🕋quran🕋</a>
+  <a href="https://kbdalnby180-commits.github.io/crash-plane/">🛫plan X🛫</a>
+  <a href="star.html">💖تقييمك ليا💖</a>
+  <a href="info.html">💖معلومات عن الموقع💖</a>
+</div>
+
 
     <!-- 🎬 الفيديو -->
     <section>
@@ -155,6 +154,7 @@
 
 </body>
 </html>
+
 
 
 
