--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
     </header>
 
     <!-- 🟧 جدول الروابط -->
-<div class="screen">
-  <div class="table-scroll">
-    <table class="menu-table">
+<div class="table-wrapper">
+  <table class="menu-table">
+    <thead>
       <tr>
         <th><a href="game.html">🎮 Game War</a></th>
         <th><a href="من سيربح المليون.html">❓ Game Question</a></th>
@@ -145,12 +145,9 @@
         <th><a href="star.html">💖تقييمك ليا💖</a></th>
         <th><a href="info.html">💖معلومات عن الموقع💖</a></th>
       </tr>
-    </table>
-  </div>
+    </thead>
+  </table>
 </div>
-
-
-
     <!-- 🎬 الفيديو -->
     <section>
         <h2>Welcome</h2>
@@ -161,6 +158,7 @@
 
 </body>
 </html>
+
 
 
 
