--- a/index.html
+++ b/index.html
@@ -132,9 +132,10 @@
     </header>
 
     <!-- 🟧 جدول الروابط -->
-<div class="table-wrapper">
-  <table class="menu-table">
-    <thead>
+
+<div class="screen-fixed">
+  <div class="table-scroll">
+    <table class="menu-table">
       <tr>
         <th><a href="game.html">🎮 Game War</a></th>
         <th><a href="من سيربح المليون.html">❓ Game Question</a></th>
@@ -145,8 +146,8 @@
         <th><a href="star.html">💖تقييمك ليا💖</a></th>
         <th><a href="info.html">💖معلومات عن الموقع💖</a></th>
       </tr>
-    </thead>
-  </table>
+    </table>
+  </div>
 </div>
     <!-- 🎬 الفيديو -->
     <section>
@@ -158,6 +159,7 @@
 
 </body>
 </html>
+
 
 
 
