--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <a href="من سيربح المليون.html">مش هتقدر تتسلي غير معانا</a>    
 </header>
 
-<!-- 🟧 جدول الروابط ثابت الشريط والجدول يتحرك -->
+<!-- 🟧 جدول الروابط -->
 <div class="screen-fixed">
   <div class="table-scroll">
     <table class="menu-table">
@@ -40,7 +40,7 @@
   </div>
 </div>
 
-<!-- 🎬 المحتوى أسفل الجدول -->
+<!-- 🎬 المحتوى -->
 <section>
     <h2>Welcome</h2>
     <video controls>
