--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </form>
 </div>
 
-<!-- 🟥 الهيدر ثابت -->
+<!-- 🟥 الهيدر -->
 <header>
     <a href="من سيربح المليون.html">مش هتقدر تتسلي غير معانا</a>    
 </header>
@@ -33,8 +33,6 @@
         <th><a href="video music.html">🎞Basant & Diasti🎞</a></th>
         <th><a href="music.html">🕋quran🕋</a></th>
         <th><a href="https://kbdalnby180-commits.github.io/crash-plane/">🛫plan X🛫</a></th>
-        <th><a href="star.html">💖تقييمك ليا💖</a></th>
-        <th><a href="info.html">💖معلومات عن الموقع💖</a></th>
       </tr>
     </table>
   </div>
@@ -48,5 +46,6 @@
     </video>
 </section>
 
+<script src="script.js"></script>
 </body>
 </html>
