--- a/index.html
+++ b/index.html
@@ -11,15 +11,15 @@
 <!-- 🔎 البحث -->
 <div class="search">
     <h1>البحث والاكتشاف</h1>
-    <form action="https://www.google.com/search" method="GET" target="_blank">
-        <input type="text" name="q" placeholder="ابحث هنا..." required>
+    <form action="#" id="searchForm">
+        <input type="text" placeholder="ابحث هنا..." id="searchInput">
         <input type="submit" value="بحث">
     </form>
 </div>
 
 <!-- 🟥 الهيدر -->
 <header>
-    <a href="من سيربح المليون.html">مش هتقدر تتسلي غير معانا</a>    
+    مش هتقدر تتسلي غير معانا
 </header>
 
 <!-- 🟧 جدول الروابط -->
@@ -41,7 +41,7 @@
 <!-- 🎬 المحتوى -->
 <section>
     <h2>Welcome</h2>
-    <video controls>
+    <video controls id="mainVideo">
         <source src="VID-20250315-WA0059.mp4" type="video/mp4">
     </video>
 </section>
