--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title> مش هتقدر تتسلي غير معانا</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         /* 🌑 الخلفية والستايل الأساسي */
         body {
@@ -153,3 +154,4 @@
 
 </body>
 </html>
+
