--- a/music.html
+++ b/music.html
@@ -1,82 +1,156 @@
 <!DOCTYPE html>
 <html lang="ar">
 <head>
-    <meta charset="UTF-8">
-    <title>🕋quran🕋</title>
-    <style>
-        body {
-            background: linear-gradient(135deg, #1a1a1a, #333);
-            margin: 0;
-            padding: 0;
-            font-family: Arial, sans-serif;
-            color: white;
-        }
-        header {
-            background-color: #000000cc;
-            color: #fff;
-            padding: 15px;
-            text-align: center;
-            font-size: x-large;
-            box-shadow: 0 0 10px #000;
-        }
-        h1 {
-            color: #ff3c00;
-            margin: 0;
-        }
-        h1:hover {
-            color: #00c3ff;
-        }
-        .music-list {
-            margin: 30px auto;
-            width: 70%;
-            background: #000000aa;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 0 15px #000;
-        }
-        .music-item {
-            margin: 15px 0;
-        }
-        audio {
-            width: 100%;
-            outline: none;
-            border-radius: 10px;
-            background-color: #111;
-        }
-    </style>
+<meta charset="UTF-8">
+<title>🕋Fun X – القرآن الكريم🕋</title>
+<style>
+body {
+    margin: 0;
+    padding: 0;
+    font-family: "Georgia", serif;
+    color: #fff;
+    overflow-x: hidden;
+    background: #000;
+    transition: background 2s;
+}
+
+/* ⭐ النجوم */
+.stars { position: fixed; width: 100%; height: 100%; z-index: -3; }
+.star {
+    position: absolute;
+    border-radius: 50%;
+    background: #fff;
+    animation: twinkle 6s linear infinite;
+    opacity: 0;
+}
+@keyframes twinkle { 0%,100% { opacity: 0.2; } 50% { opacity: 1; } }
+
+/* ☁️ الغيوم */
+.cloud { position: fixed; top:20%; width:300px; height:80px; background: rgba(255,255,255,0.05); border-radius:50%; animation: cloudMove 120s linear infinite; z-index:-2; }
+.cloud:nth-child(2) { top:50%; width:500px; height:100px; animation-duration:200s; }
+@keyframes cloudMove { 0% { left:-500px; } 100% { left:100%; } }
+
+/* 🟥 الهيدر */
+header {
+    background: rgba(0,0,0,0.85);
+    color: #fc0000;
+    padding: 15px;
+    text-align: center;
+    font-size: 28px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    box-shadow: 0 0 10px #000;
+    text-shadow: 0 0 5px #fc0000;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+header h1 { margin:0; transition:0.3s; cursor: default; animation: glow 1.5s infinite alternate; }
+header h1:hover { color:#00c3ff; text-shadow:0 0 20px #00c3ff,0 0 30px #00ffff; }
+@keyframes glow {
+    0% { text-shadow: 0 0 5px #fc0000; }
+    50% { text-shadow:0 0 15px #fc0000,0 0 25px #ff4500; }
+    100% { text-shadow:0 0 25px #fc0000,0 0 30px #ff8000; }
+}
+
+/* 📜 قائمة القرآن */
+.music-list {
+    margin: 30px auto;
+    width: 80%;
+    background: rgba(0,0,0,0.75);
+    padding: 20px;
+    border-radius: 12px;
+    box-shadow: 0 0 25px #111;
+}
+.music-list h2 {
+    color: #f83a00;
+    text-align: center;
+    margin-bottom: 20px;
+}
+.music-item {
+    margin: 15px 0;
+    background: rgba(255,255,255,0.05);
+    padding: 10px 15px;
+    border-radius: 10px;
+    box-shadow: 0 0 15px #000 inset;
+}
+audio {
+    width: 100%;
+    outline: none;
+    border-radius: 10px;
+    background-color: #111;
+    box-shadow: 0 0 10px #f83a00;
+}
+
+/* إشعار */
+#notify { position:fixed; bottom:20px; right:20px; background:#f83a00; color:#fff; padding:12px 20px; border-radius:10px; box-shadow:0 0 20px #000; display:none; font-weight:bold; z-index:1000; }
+
+/* الهواتف */
+@media(max-width:768px){
+    header{font-size:22px;}
+    .music-list{width:95%;}
+}
+</style>
 </head>
 <body>
 
-    <header>
-        <h1>🕋ركن القران الكريم🕋</h1>
-    </header>
+<div class="stars"></div>
+<div class="cloud"></div>
+<div class="cloud"></div>
 
-    <section class="music-list">
-        <h2>ارح سمعك بي القران الكريم</h2>
-        
-        <div class="music-item">
-            <p>قران 1</p>
-            <audio controls>
-                <source src="sounds\078.mp3" type="audio/mpeg">
-                متصفحك لا يدعم تشغيل الصوت.
-            </audio>
-        </div>
+<header>
+<h1>🕋Fun X – القرآن الكريم🕋</h1>
+</header>
 
-        <div class="music-item">
-            <p>قران 2</p>
-            <audio controls>
-                <source src="sounds\079.mp3" type="audio/mpeg">
-            </audio>
-        </div>
+<section class="music-list">
+<h2>ارح سمعك بالقرآن الكريم</h2>
 
-        <div class="music-item">
-            <p>قران</p>
-            <audio controls>
-                <source src="sounds\080.mp3" type="audio/mpeg">
-            </audio>
-        </div>
+<div class="music-item">
+<p>قرآن 1</p>
+<audio controls>
+<source src="sounds/078.mp3" type="audio/mpeg">
+متصفحك لا يدعم تشغيل الصوت.
+</audio>
+</div>
 
-    </section>
+<div class="music-item">
+<p>قرآن 2</p>
+<audio controls>
+<source src="sounds/079.mp3" type="audio/mpeg">
+</audio>
+</div>
 
+<div class="music-item">
+<p>قرآن 3</p>
+<audio controls>
+<source src="sounds/080.mp3" type="audio/mpeg">
+</audio>
+</div>
+
+</section>
+
+<div id="notify"></div>
+
+<script>
+// 🌟 النجوم
+for(let i=0;i<100;i++){
+    const star=document.createElement('div');
+    star.className='star';
+    star.style.top=Math.random()*100+'%';
+    star.style.left=Math.random()*100+'%';
+    star.style.width=star.style.height=Math.random()*2+1+'px';
+    document.body.appendChild(star);
+}
+
+// إشعار عند الدخول
+function showNotification(text){
+    const notify=document.getElementById('notify');
+    notify.innerText=text;
+    notify.style.display='block';
+    setTimeout(()=>notify.style.display='none',5000);
+}
+showNotification("مرحباً بك في ركن القرآن الكريم");
+
+</script>
 </body>
 </html>
