--- a/من سيربح المليون.html
+++ b/من سيربح المليون.html
@@ -3,58 +3,131 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>من سيربح المليون - نسخة حقيقية</title>
+<title>Fun X – من سيربح المليون</title>
 <style>
-    body {
-        font-family: Arial, sans-serif;
-        background-color: #1a1a1a;
-        color: #fff;
-        margin: 0;
-        padding: 0;
-        display: flex;
-        justify-content: center;
-        align-items: flex-start;
-        min-height: 100vh;
-    }
-    .question-container {
-        background-color: #222;
-        padding: 30px;
-        margin-top: 50px;
-        border-radius: 15px;
-        box-shadow: 0 0 20px #ff0000;
-        width: 90%;
-        max-width: 600px;
-    }
-    #score {
-        font-size: 18px;
-        margin-bottom: 15px;
-        text-align: center;
-        color: #ffcc00;
-    }
-    .question {
-        font-size: 22px;
-        margin-bottom: 20px;
-        text-align: center;
-    }
-    .answers button {
-        width: 100%;
-        padding: 15px;
-        margin: 8px 0;
-        border: none;
-        border-radius: 10px;
-        font-size: 18px;
-        cursor: pointer;
-        background-color: #ff4500;
-        color: #fff;
-        transition: 0.3s;
-    }
-    .answers button:hover {
-        background-color: #ffa500;
-        color: #000;
-    }
+body {
+    font-family: "Cairo", Arial, sans-serif;
+    background: #000;
+    color: #fff;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: flex-start;
+    min-height: 100vh;
+    overflow-x: hidden;
+}
+
+/* ⭐ النجوم */
+.stars { position: fixed; width: 100%; height: 100%; z-index: -3; }
+.star {
+    position: absolute;
+    border-radius: 50%;
+    background: #fff;
+    animation: twinkle 6s linear infinite;
+    opacity: 0;
+}
+@keyframes twinkle { 0%,100% { opacity: 0.2; } 50% { opacity: 1; } }
+
+/* 🟥 الهيدر */
+header {
+    background: rgba(0,0,0,0.85);
+    color: #fc0000;
+    padding: 15px;
+    text-align: center;
+    font-size: 26px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    box-shadow: 0 0 10px #000;
+    text-shadow: 0 0 5px #fc0000;
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+}
+header h1 {
+    margin:0;
+    animation: glow 1.5s infinite alternate;
+}
+@keyframes glow {
+    0% { text-shadow: 0 0 5px #fc0000; }
+    50% { text-shadow:0 0 15px #fc0000,0 0 25px #ff4500; }
+    100% { text-shadow:0 0 25px #fc0000,0 0 30px #ff8000; }
+}
+
+/* 🟧 صندوق الأسئلة */
+.question-container {
+    background-color: rgba(34,34,34,0.95);
+    padding: 30px;
+    margin-top: 50px;
+    border-radius: 15px;
+    box-shadow: 0 0 25px #ff0000;
+    width: 90%;
+    max-width: 600px;
+}
+
+#score {
+    font-size: 18px;
+    margin-bottom: 15px;
+    text-align: center;
+    color: #ffcc00;
+}
+
+.question {
+    font-size: 22px;
+    margin-bottom: 20px;
+    text-align: center;
+    color: #f83a00;
+    text-shadow: 0 0 10px #ff4500;
+}
+
+.answers button {
+    width: 100%;
+    padding: 15px;
+    margin: 8px 0;
+    border: none;
+    border-radius: 10px;
+    font-size: 18px;
+    cursor: pointer;
+    background: linear-gradient(90deg,#ff4500,#ffa500);
+    color: #fff;
+    transition: 0.3s;
+    text-shadow: 0 0 5px #000;
+}
+.answers button:hover {
+    background: linear-gradient(90deg,#00eaff,#00aaff);
+    color: #000;
+}
+
+/* إشعار */
+#notify {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background: #f83a00;
+    color: #fff;
+    padding: 12px 20px;
+    border-radius: 10px;
+    box-shadow: 0 0 20px #000;
+    display: none;
+    font-weight: bold;
+    z-index: 1000;
+}
+
+/* الهواتف */
+@media(max-width:768px){
+    header{font-size:22px;}
+    .question-container{width:95%;}
+    .answers button{font-size:16px; padding:12px;}
+}
 </style>
 </head>
 <body>
+
+<div class="stars"></div>
+<header>
+<h1>Fun X – من سيربح المليون</h1>
+</header>
+
 <div class="question-container">
     <div id="score">النقاط: 0</div>
     <div id="question" class="question"></div>
@@ -66,60 +139,58 @@
     </div>
 </div>
 
+<div id="notify"></div>
+
 <script>
+// 🌟 النجوم
+for(let i=0;i<100;i++){
+    const star=document.createElement('div');
+    star.className='star';
+    star.style.top=Math.random()*100+'%';
+    star.style.left=Math.random()*100+'%';
+    star.style.width=star.style.height=Math.random()*2+1+'px';
+    document.body.appendChild(star);
+}
+
+// أسئلة اللعبة
 const questions = [
-    // مستوى 1
     { question: "ما هو أكبر حيوان بري على وجه الأرض؟", answers: ["الفيل", "الزرافة", "التمساح", "الدب"], correct: 0, level: 1 },
     { question: "ما هو أسرع حيوان على الأرض؟", answers: ["الفرس", "الفهد", "النمر", "الذئب"], correct: 1, level: 1 },
     { question: "ما هو أطول نهر في العالم؟", answers: ["الأمازون", "النيل", "اليانغتسي", "الميسيسيبي"], correct: 1, level: 1 },
     { question: "ما هو الكوكب الأقرب للشمس؟", answers: ["المريخ", "الزهرة", "عطارد", "الأرض"], correct: 2, level: 1 },
-    { question: "ما هو لون دم الإنسان؟", answers: ["أحمر", "أزرق", "أخضر", "أصفر"], correct: 0, level: 1 },
-    // مستوى 2
-    { question: "من هو مؤسس شركة مايكروسوفت؟", answers: ["ستيف جوبز", "بيل غيتس", "مارك زوكربيرغ", "لاري بيج"], correct: 1, level: 2 },
-    { question: "ما هو العنصر الكيميائي الذي رمزه O؟", answers: ["الذهب", "الأكسجين", "الهيليوم", "الحديد"], correct: 1, level: 2 },
-    { question: "ما هي عاصمة فرنسا؟", answers: ["روما", "باريس", "مدريد", "لندن"], correct: 1, level: 2 },
-    { question: "أي من هذه الدول ليست في قارة أفريقيا؟", answers: ["مصر", "نيجيريا", "البرازيل", "كينيا"], correct: 2, level: 2 },
-    { question: "ما هو أكبر محيط في العالم؟", answers: ["الأطلسي", "الهندي", "المحيط الهادئ", "المحيط المتجمد"], correct: 2, level: 2 },
-    // مستوى 3
-    { question: "ما هو أسرع مركبة فضائية أرسلت إلى الفضاء؟", answers: ["أبولو 11", "باركر سولار بروب", "سبوتنيك 1", "تشالنجر"], correct: 1, level: 3 },
-    { question: "ما هو الحيوان الذي يمكنه البقاء بدون ماء أطول فترة؟", answers: ["الجمل", "التمساح", "الفيل", "الأسد"], correct: 0, level: 3 },
-    { question: "من هو مؤلف رواية هاري بوتر؟", answers: ["ج. ك. رولينغ", "ستيفن كينج", "أجاثا كريستي", "تولكين"], correct: 0, level: 3 },
-    { question: "ما هي وحدة قياس شدة التيار الكهربائي؟", answers: ["أوم", "فولت", "أمبير", "واط"], correct: 2, level: 3 },
-    { question: "ما هي اللغة الرسمية في كندا؟", answers: ["الإنجليزية", "الفرنسية", "الإنجليزية والفرنسية", "الإسبانية"], correct: 2, level: 3 },
-    // مستوى 4
-    { question: "في أي عام انتهت الحرب العالمية الثانية؟", answers: ["1945", "1939", "1918", "1950"], correct: 0, level: 4 },
-    { question: "من هو مخترع المصباح الكهربائي؟", answers: ["توماس إديسون", "ألكسندر غراهام بيل", "نيكولا تسلا", "جيمس وات"], correct: 0, level: 4 },
-    { question: "ما هي أكبر صحراء في العالم؟", answers: ["الصحراء الكبرى", "صحراء جوبي", "صحراء أتاكاما", "صحراء ناميب"], correct: 0, level: 4 },
-    { question: "ما هو أسرع طائر في العالم؟", answers: ["الصقر الشاهين", "النسرة", "الغراب", "النعامة"], correct: 0, level: 4 },
-    { question: "ما هو الكوكب الأحمر؟", answers: ["المريخ", "الزهرة", "الأرض", "عطارد"], correct: 0, level: 4 }
+    { question: "ما هو لون دم الإنسان؟", answers: ["أحمر", "أزرق", "أخضر", "أصفر"], correct: 0, level: 1 }
 ];
 
 let currentQuestionIndex = 0;
-let score = 0;
+let score = localStorage.getItem('score') ? parseInt(localStorage.getItem('score')) : 0;
+document.getElementById("score").innerText = "النقاط: " + score;
 
 function loadQuestion() {
     const question = questions[currentQuestionIndex];
     document.getElementById("question").innerText = question.question;
     const answers = document.querySelectorAll(".answers button");
-    answers.forEach((button, index) => {
-        button.innerText = question.answers[index];
-    });
+    answers.forEach((button, index) => { button.innerText = question.answers[index]; });
 }
 
-function checkAnswer(selectedIndex) {
-    const question = questions[currentQuestionIndex];
-    if (selectedIndex === question.correct) {
+function showNotification(text){
+    const notify=document.getElementById('notify');
+    notify.innerText=text;
+    notify.style.display='block';
+    setTimeout(()=>notify.style.display='none',3000);
+}
+
+function checkAnswer(selectedIndex){
+    const question=questions[currentQuestionIndex];
+    if(selectedIndex===question.correct){
         score += question.level * 1000;
-        alert("إجابة صحيحة!");
+        showNotification("إجابة صحيحة! +" + question.level*1000 + " نقطة");
     } else {
-        alert("إجابة خاطئة!");
+        showNotification("إجابة خاطئة!");
     }
+    localStorage.setItem('score',score);
     currentQuestionIndex++;
-    if (currentQuestionIndex < questions.length) {
-        loadQuestion();
-    } else {
-        alert("لقد أكملت اللعبة! نقاطك النهائية: " + score);
-    }
+    if(currentQuestionIndex<questions.length){ loadQuestion(); }
+    else { showNotification("لقد أكملت اللعبة! نقاطك النهائية: " + score); }
     document.getElementById("score").innerText = "النقاط: " + score;
 }
 
